2005-02-18  Raja R Harinath  <rharinath@novell.com>

	* cs0120-5.cs: New test from #72678.

	* cs0131-3.cs: New test from #63202.

2005-02-16  Raja R Harinath  <rharinath@novell.com>

	* cs0187-1.cs, cs0187-2.cs: New tests from #63202.

2005-02-15  Raja R Harinath  <rharinath@novell.com>

	* cs1502-3.cs: New test from #72554.

2005-02-11 Marek Safar <marek.safar@seznam.cz>

	* cs0133-2.cs, cs1641.cs, cs1642.cs, cs1644-3.cs, cs1663.cs
	cs1665.cs, cs1666.cs, cs3003-5.cs: Fixed buffer error tests.

2005-02-10  Raja R Harinath  <rharinath@novell.com>

	* cs0121-4.cs: New test.  Ensure that a param method isn't
	discarded if the signatures of other normal methods are different.

2005-02-04  Zoltan Varga  <vargaz@freemail.hu>

	* cs1617.cs: Add a newline so do-tests.pl can process it under
	sparc.

2005-02-02  Raja R Harinath  <rharinath@novell.com>

	* cs0108-12.cs: New test.  Ensure that cs0108 handling occurs when
	a constant is defined ahead of time due to forward references.

2005-01-25 Marek Safar <marek.safar@seznam.cz>

	* cs0176-4.cs: Bug #71257.

2005-01-25 Marek Safar <marek.safar@seznam.cz>

	* cs0647-14.cs: Bug #71651.
	
2005-01-12  Raja R Harinath  <rharinath@novell.com>

	* Makefile (run-generics-tests): Fix quoting to better work in
	Windows.  Remove some stray code leftover from testing.
	(DISTFILES): Distribute *.inc, *.pub, and *.response files too.
	* cs2023.response: Rename from CS2023.
	* cs2023.cs: Update.

2005-01-10  Raja R Harinath  <rharinath@novell.com>

	* Makefile (all-local): Add CS0118-2-lib.dll.
	(run-mcs-tests, run-generics-tests): Don't pipe through tee.  It
	loses exit code of do-tests.pl.
	* do-tests.pl (PROFILELOG): New.  Copy all output to this file too.
	* cs0234-2.cs: Bug #52697.
	* cs0234-3.cs: Bug #57200.
	* cs0118-2.cs, CS0118-2-lib.cs: Bug #67520.
	* cs0538-2.cs: Remove bogus test.

2005-01-10 Marek Safar <marek.safar@seznam.cz>

	* cs0612-2.cs, CS0612-2-lib.cs: Bug #70722.
	
2005-01-07 Marek Safar <marek.safar@seznam.cz>
